--- a/client/index.html
+++ b/client/index.html
@@ -25,11 +25,11 @@
     <script>
       $(function() {
         // set up model objects
-        var library = new Songs(songData);
-        var app = new AppModel({library: library});
+        window.library = new Songs(songData);
+        window.app = new AppModel({library: library});
 
         // build a view for the top level of the whole app
-        var appView = new AppView({model: app});
+        window.appView = new AppView({model: app});
 
         // put the view onto the screen
         $('body').append(appView.render());
